Fix bug with logo fix on small screens

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -13,9 +13,14 @@
     padding-bottom: 20px;
   }
 
+  &__right {
+    @media (max-width: $md-width) {
+      margin-right: 60px;
+    }
+  }
+
   &__logo {
     display: block;
-    margin-right: 60px;
   }
 
   &__nav {
